--- a/paper/explanation.Rmd
+++ b/paper/explanation.Rmd
@@ -1,12 +1,16 @@
 ---
 title: "computational details of low-rank matrix completion via adaptive-impute"
 author: "Alex Hayes"
-date: "4/26/2019"
+date: "`r Sys.Date()`"
 output: pdf_document
+bibliography: references.bib
+link-citations: true
+urlcolor: blue
 header-includes:
   \usepackage[linesnumbered,ruled,vlined]{algorithm2e}
   \DeclareMathOperator{\diag}{diag}
   \DeclareMathOperator{\trace}{trace}
+  \DeclareMathOperator{\sign}{sign}
   \linespread{1.25}
   \usepackage{helvet}
   \renewcommand{\familydefault}{\sfdefault}
@@ -16,50 +20,69 @@ header-includes:
 knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
 ```
 
-## Motivation
-
-TODO: add references section and save the PDFs in the repository with the code here, etc
-
-TODO: go through and be really really careful with notation. missing some $i$'s in algorithm 2. explain hadamard product. express frobenius inner product of matrices as sum of elements of hadamard products.
-
-Notation: $y -> Y$ and treat it as a bitmask matrix
-
-LMAO Adaptative Impute can be abbreviated AI
-
-## Notation & Algorithm
-
 \newcommand \bv {\mathbf{v}}
 \newcommand \bu {\mathbf{u}}
 \newcommand \bl {\boldsymbol{\lambda}}
 
+## Abstract
+
+TODO: motivate ugh this is a show
+
+This paper is a tutorial covering the computational details associated with computing the low-rank rank adaptive imputations for matrices described in [@cho_asymptotic_2015; @cho_intelligent_2018]. This work extends previous data adaptive matrix imputation strategies such as that of [@mazumder_spectral_2010], and has better performance while eliminating tuning parameters.
+
+The tutorial proceeds in three parts. First, we introduce the imputation algorithms, useful tidbits of linear algebra and the R package `Matrix`, which we will use to illustrate computations. After a naive initial implementation which eats up lots of memory, we demonstrate a memory-efficient implementation. Finally, we extend this memory-efficient implementation to the partially observed matrices that possibly have a large number of observed zeros.
+
+[@bates_introduction_2005; @cho_asymptotic_2015; @cho_intelligent_2018; @maechler_2nd_2006; @mazumder_spectral_2010; @bro_resolving_2007]
+
+
+## Notation & Algorithm
+
+There are two steps to computing the low rank approximation of [@cho_intelligent_2018]. First we use compute an initial low rank estimate with the `AdaptiveInitialize` algorithm. This step is essentially a debiased SVD. We then use the initial solution as a seed for the `AdaptiveImpute` algorithm, a form of iterative SVD thresholding with a data adaptive thresholding parameter.
+
+The input to these algorithms is a partially observed matrix $M$, and $r$, the desired rank of the low-rank approximation. We define $Y$ to be an indicator matrix that tells us whether or not we observed a particular value of $M$.
+
 \begin{algorithm}
 \linespread{1.6}\selectfont
 \DontPrintSemicolon
-\KwIn{$M, y$ and $r$}
-$\hat p \gets \frac{1}{nd} \sum_{i=1}^n \sum_{j=1}^d y_{ij}$ \;
+\KwIn{$M, Y$ and $r$}
+$\hat p \gets \frac{1}{nd} \sum_{i=1}^n \sum_{j=1}^d Y_{ij}$ \;
 $\Sigma_{\hat p} \gets M^T M - (1 - \hat p) \diag(M^T M)$ \;
 $\Sigma_{t \hat p} \gets M M^T - (1 - \hat p) \diag(M M^T)$ \;
 $\hat V_i \gets \bv_i(\Sigma_{\hat p})$ for $i = 1, ..., r$ \;
 $\hat U_i \gets \bu_i(\Sigma_{t \hat p})$ for $i = 1, ..., r$ \;
 $\tilde \alpha \gets \frac{1}{d - r} \sum_{i=r+1}^d \bl_i (\Sigma_{\hat p})$ \;
 $\hat \lambda_i \gets \frac{1}{\hat p} \sqrt{\bl_i (\Sigma_{\hat p}) - \tilde \alpha}$ for $i = 1, ..., r$ \;
-$\hat s_i \gets $ sign stuff for $i = 1, ..., r$ \;
-\Return{$\hat s_i, \hat \lambda_i, \hat U_i, \hat V_i$ for $i = 1, ..., r$}\;
+$\hat s_i \gets \sign(\langle \hat V_i, \bv_i (M) \rangle) \sign(\langle \hat U_i, \bu_i (M) \rangle)$ for $i = 1, ..., r$ \;
+$\hat \lambda_i \gets \hat s_i \cdot \hat \lambda_i$ \;
+\Return{$\hat \lambda_i, \hat U_i, \hat V_i$ for $i = 1, ..., r$}\;
 \caption{\texttt{AdapativeInitialize}}
 \end{algorithm}
 
-Then we can construct an approximation 
+Here $\bu_i, \bl_i, \bv_i$ are functions that return the $i^{th}$ left singular vector, singular value, and right singular value, respectively. $\tilde \alpha$ is the data adaptive thresholding parameter. Note that it is the average of the uncalculated singular values, and is thus positive.
+
+In line 8, $\langle , \rangle$ denotes the Frobenius inner norm. That is, for vectors $x, y$ and matrices $A, B$:
 
 \begin{align}
-\hat M = \sum_{i=1}^r \hat s_i  \hat \lambda_i \hat U_i \hat V_i^T
+\langle x, y \rangle &= x^T y = \sum_{i} x_i y_i \\
+\langle A, B \rangle &= \sum_{i, j} A_{ij} B_{ij} = \sum_{ij} A \odot B \\
 \end{align}
+
+We use $A \odot B$ to mean the elementwise (Hadamard) product of matrices $A$ and $B$.
+
+We can use the output of `AdaptiveInitialize` to construct a low rank approximation to $M$ via:
+
+\begin{align}
+\hat M = \sum_{i=1}^r \hat \lambda_i \hat U_i \hat V_i^T
+\end{align}
+
+Next up is `AdaptiveImpute`:
 
 \begin{algorithm}
 \linespread{1.6}\selectfont
 \DontPrintSemicolon
-\KwIn{$M, y, r$ and $\varepsilon > 0$}
+\KwIn{$M, Y, r$ and $\varepsilon > 0$}
 
-$Z^{(1)} \gets \texttt{AdaptiveInitialize}(M, y, r)$ \;
+$Z^{(1)} \gets \texttt{AdaptiveInitialize}(M, Y, r)$ \;
 
 \Repeat{$\| Z_{t+1} - Z_t \|^2_F / \| Z_{t+1} \|_F$}{
   
@@ -72,23 +95,45 @@ $Z^{(1)} \gets \texttt{AdaptiveInitialize}(M, y, r)$ \;
   $t \gets t + 1$ \;
 }
 \Return{$\hat \lambda_i^{(t)}, \hat U_i^{(t)}, \hat V_i^{(t)}$ for $i = 1, ..., r$}\;
-\caption{\texttt{AdapativeImpute}}
+\caption{\texttt{AdaptiveImpute}}
 \end{algorithm}
+
+Here we again have some new notation. First we define
+
+\begin{align}
+P_\Omega(A) &= A \odot Y \\
+P_\Omega^\perp (A) &= A \odot (1 - Y)
+\end{align}
+
+These are the projecttion of a matrix $A$ onto the observed of $M$ and the unobserved elements of $M$, respectively. Similar $\Omega$ is the set of all pairs $(i, j)$ such that $M_{i, j}$ is observed. $\bl_i^2 (A)$ is a function that returns the $i^{th}$ *squared* singular value of $A$ (i.e. $\bl_i^2 (A) = \left(\bl_i (A)\right)^2$). Finally $\Vert \cdot \Vert_F$ is the Frobenius norm of a matrix.
 
 ## Pre-requisites
 
 ### The Matrix package
 
-reference: https://cran.r-project.org/web/packages/Matrix/vignettes/Intro2Matrix.pdf
+If you haven't used the `Matrix` package before, we recommend reading [this introduction][matrix_intro] as well as this [2nd introduction][matrix_2nd_intro].
+
+[matrix_intro]: https://cran.r-project.org/web/packages/Matrix/vignettes/Intro2Matrix.pdf
+[matrix_2nd_intro]: https://cran.r-project.org/web/packages/Matrix/vignettes/Intro2Matrix.pdf
 
 ```{r}
 library(Matrix)
 
 set.seed(17)
 
-M <- rsparsematrix(8, 12, nnz = 30) # small example, not very sparse
-summary(M)
+# create a random 8 x 12 sparse matrix with 30 nonzero entries
+M <- rsparsematrix(8, 12, nnz = 30)
+M
+```
 
+
+```{r}
+summary(M)
+```
+
+TODO: different storage formats for sparse matrices. CSC, triplet, symmetric. for the most part `Matrix` does the right thing for you. The triplet form will be most important for us later on when we right out some matrix multiplications by hand.
+
+```{r}
 # note that Matrix objects are S4 classes so we access their
 # slots using the @ symbol
 class(M)
@@ -99,11 +144,9 @@ M@i  # corresponding row indices
 # if you want column indices you need a dgTMatrix
 M2 <- as(M, "dgTMatrix")
 M2@j  # corresponding column indices // only for dgCMatrix object
-
-M %*% t(M)
 ```
 
-Summations and norms
+We will repeatedly calculate squared Frobenious norms throughout this tutorial. It's important to know that there are *many, many* ways to calculate this norm. We will almost always calculate the squared Frobenius norm of a sparse Matrix `M` via `sum(M@x^2)`. That said, these are all equivalent:
 
 ```{r}
 M^2    # square each element in M elementwise, return as sparse matrix
@@ -111,16 +154,13 @@ M@x^2  # square each element in M elementwise, return as vector of nonzeros
 
 # the second version is much faster
 bench::mark(
-  sum(M^2),
   sum(M@x^2),
+  sum(M^2),
   sum(colSums(M^2)),
   norm(M, type = "F")^2,
+  sum(M * M),
   iterations = 20
 )
-
-sum(M^2) == sum(M@x^2)  # sums are the same
-
-norm(M, type = "F")^2 == sum(M^2)  # and equal the Frobenius norm squared
 ```
 
 The projections $P_\Omega (A)$ and $P_\Omega^\perp (A)$ where $\Omega$ indicates the observed elements of a matrix $M$ and $A$ is another matrix with the same dimensions as $M$.
@@ -691,7 +731,7 @@ and then
 \left \Vert P_\Omega^\perp (Z_t) \right \Vert_F^2
 = \left \Vert Z_t \right \Vert_F^2
   - \left \Vert P_\Omega (Z_t) \right \Vert_F^2 \\
-= \sum_{i = 1}^r \lambda_i^2 - \left \Vert Z_t \odot y \right \Vert_F^2
+= \sum_{i = 1}^r \lambda_i^2 - \left \Vert Z_t \odot Y \right \Vert_F^2
 \end{align}
 
 Putting it all together we see
@@ -705,7 +745,7 @@ Putting it all together we see
   \right \Vert_F^2 \\
 &= \left \Vert M \right \Vert_F^2 + 
   \sum_{i = 1}^r \lambda_i^2 - 
-  \left \Vert Z_t \odot y \right \Vert_F^2
+  \left \Vert Z_t \odot Y \right \Vert_F^2
 \end{align}
 
 In code we will have a sparse matrix `M` and a list `s` with elements of the SVD. The first Frobenious norm is quick to calculate, but I am not sure how to calculate the other two frobenius norms.
@@ -1223,13 +1263,67 @@ cppFunction(
 masked_svd_times_x_cpp <- function(s, mask, x) {
   drop(masked_svd_times_x_impl(s$u, s$d, s$v, mask@i, mask@j, x))
 }
-
 ```
 
 ```{r}
 bench::mark(
   masked_svd_times_x_cpp(s, Y, x),
   masked_svd_times_x(s, Y, x)
+)
+```
+
+TODO:
+
+- the tranpose multiplication
+- the average singular value calculation
+
+Recall that to calculate the average singular value we want
+
+\begin{align}
+||\tilde M^{(t)}||_F^2
+&= \left \Vert M \right \Vert_F^2 + 
+  \sum_{i = 1}^r \lambda_i^2 - 
+  \left \Vert Z_t \odot Y \right \Vert_F^2
+\end{align}
+
+This is the other computationally intensive part so let's write it up in Armadillo as well
+
+```{r}
+library(Rcpp)
+
+cppFunction(
+  depends = "RcppArmadillo",
+  "double p_omega_f_norm_impl(
+      const arma::mat& U,
+      const arma::rowvec& d,
+      const arma::mat& V,
+      const arma::vec& row,
+      const arma::vec& col) {
+  
+    int i, j;
+    double total = 0;
+  
+    for (int idx = 0; idx < row.n_elem; idx++) {
+  
+      i = row(idx);
+      j = col(idx);
+  
+      total += accu(U.row(i) % d % V.row(j));
+    }
+  
+    return total;
+  }")
+
+# wrap with slightly nicer interface
+p_omega_f_norm_cpp <- function(s, mask) {
+  p_omega_f_norm_impl(s$u, s$d, s$v, mask@i, mask@j)
+}
+```
+
+```{r}
+all.equal(
+  sum(Z * Y),
+  p_omega_f_norm_cpp(s, Y)
 )
 ```
 
@@ -1244,3 +1338,5 @@ asdf
 
 
 TODO: don't coerce to explicit Matrix class as that is not recommended apparently. alternatives?
+
+## References
